--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.6",
     "mongoose": "^5.12.0",
     "validator": "^13.5.2"
   }
