--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.0"
+    "mongoose": "^5.12.0",
+    "validator": "^13.5.2"
   }
 }
